--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <input type="text" id="studentName" placeholder="Enter student name">
         <select id="monitorSelect">
             <option value="">Select monitor</option>
-            <option value="Alice">Alice</option>
-            <option value="Bob">Bob</option>
-            <option value="Charlie">Charlie</option>
+            <option value="Ram">Ram</option>
+            <option value="Sham">Sham</option>
+            <option value="Siya">Siya</option>
         </select>
         <button onclick="vote()">Vote</button>
     </div>
